base/apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-dep
  template:
    metadata:
      labels:
        app: frontend-dep
    spec:
      # automountServiceAccountToken: false
      # securityContext:
      #   seccompProfile:
      #     type: RuntimeDefault
      containers:
        - name: frontend
          image: "aam/frontend"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /var/run
              name: tmpfs-1
            - mountPath: /var/cache/nginx
              name: tmpfs-2
          # securityContext:
          #   readOnlyRootFilesystem: true
          #   allowPrivilegeEscalation: false
          #   runAsUser: 11000
          #   runAsGroup: 11000
          #   capabilities:
          #     drop: ["NET_RAW", "SYS_TIME"]
      volumes:
          - name: tmpfs-1
            emptyDir: {}
          - name: tmpfs-2
            emptyDir: {}
